css hack for disqus overlapping footer bug

--- a/src/components/blog-post/BlogPost.scss
+++ b/src/components/blog-post/BlogPost.scss
@@ -26,3 +26,7 @@
 
   border-bottom: 1px solid #e5e5e5;
 }
+
+.post_disqus {
+  margin-bottom: 128px;
+}
